# batterytester

./: .gitignore  BUILD_FIXES.md  CMakeLists.txt  FUTURE_SENDER_INTEGRATION.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  Main.qml  PROJECT_OVERVIEW.md  QT_CREATOR_GUIDE.md  README.md  TestMinimal.qml  create_icon.sh  csvdatamodel.cpp  csvdatamodel.h  devicemanager.cpp  devicemanager.h  deviceprotocol.cpp  deviceprotocol.h  main.cpp  usb_receiver.py  usb_sender.py
.github/workflows/: build-windows.yml
received_files/: test_results_ch_1.csv  test_results_ch_2.csv  test_results_ch_3.csv  test_results_ch_4.csv  test_results_ch_5.csv  test_results_ch_6.csv
send_settings/: setting_1.csv  setting_2.csv  setting_3.csv  setting_4.csv
